--- a/01_var_let_const/Lab_var_04.html
+++ b/01_var_let_const/Lab_var_04.html
@@ -52,12 +52,14 @@ $(document).ready(function () {
 
         // ----- B 段落 -----
         let x2 = 100;
-        let x2 = 200;  // <----- 
+        let y2 = 200;   
+     //let x2 = 200;  // <----- 
         report.innerHTML += `
             x2 = ${x2}<br>
+
             y2 = ${y2}<br>
         `;
-        let y2 = 200; // <-----
+        //let y2 = 200; // <-----
 
         report.innerHTML += "-- End -- ";
     })
