--- a/02_operators/Lab_operator_05.html
+++ b/02_operators/Lab_operator_05.html
@@ -32,7 +32,10 @@
     </button>
 
     <p class="task-description">B. 檢視結果:</p>
-    <div id="report" class="task-description">
+    <div id="report" class="task-description">    
+    </div>    
+    <p class="task-description">c. 檢視結果:</p>
+    <div id="report2" class="task-description">    
     </div>
 
 </div>
@@ -49,7 +52,7 @@ $(document).ready(function () {
         var x = 0.1;
         var y = 0.2;
         z = (x * 10000 + y * 10000) / 10000;
-        report.innerHTML += `z = ${z} <br>`;
+        report2.innerHTML += `z = ${z} <br>`;
 
     })
 
