--- a/01_var_let_const/Lab_var_05.html
+++ b/01_var_let_const/Lab_var_05.html
@@ -45,7 +45,7 @@ $(document).ready(function () {
 
         let total = 0;
 
-        for (let i = 1; i <= 3; i++) {
+        for (var i = 1; i <= 3; i++) {
             total = total + i;
             report.innerHTML += `
                 i = ${i}, total = ${total}<br>
