--- a/08_module/index.html
+++ b/08_module/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <div id="debug"></div>
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="./main.js">
+    
+    </script>
 </body>
 </html>
