--- a/Lab_JS_debug/Lab_150/index_0.html
+++ b/Lab_JS_debug/Lab_150/index_0.html
@@ -58,7 +58,7 @@ report.innerHTML =
     
     function doWork(anInt, anArray, anObject) {
         anInt = 11;
-        anArray.push("three");
+        anArray.splice(1,1,"three");
         anObject.data = 101;
     }
 
