--- a/Lab_JS_debug/Lab_310/index_ok.html
+++ b/Lab_JS_debug/Lab_310/index_ok.html
@@ -47,10 +47,10 @@
         
         for (i = 1; i <= upperValue; i++) {
             result = result + i;
-            // console.log("i = " + i + " result = " + result);
-            // console.assert(
-            //     result != 45, 
-            //     "when i = " + i + ", we got wrong value.");
+            console.log("i = " + i + " result = " + result);
+            console.assert(
+                result != 45, 
+                "when i = " + i + ", we got wrong value.");
         }
 
         return result;
